Feat: - exposed an api to track the status of file upload - used celery to handle the task in background

--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -40,7 +40,7 @@ ENV PYTHONUNBUFFERED=1 \
 
 
 #install runtime dependencies
-RUN apk add --no-cache libpq
+RUN apk add --no-cache libpq netcat-openbsd
 
 
 # set working directory
